# olecf-kb

./: .gitignore  .pylintrc  MANIFEST.in  README  dependencies.ini  olecf-kb.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  test_docker.yml  test_docs.yml  test_tox.yml
config/appveyor/: install.ps1
olecf_kb/: hexdump.py  vba.py
olecfrc/: __init__.py  data_format.py  errors.py  hexdump.py  output_writers.py  vba.py  vba.yaml
olecfrc/scripts/: vba.py
scripts/: vba.py
tests/: data_format.py  hexdump.py  test_lib.py
utils/: update_release.sh
