[metadata]
license_file = LICENSE

[bdist_rpm]
release = 1
packager = Joachim Metz <joachim.metz@gmail.com>
doc_files = LICENSE
            README
build_requires = python3-setuptools
requires = libolecf-python3 >= 20151223
           python3-dfdatetime >= 20210509
           python3-dtfabric >= 20170524
           python3-pyyaml >= 3.10

[bdist_wheel]
universal = 1

