[metadata]
name = olecfrc
version = 20241013
description = Object Linking and Embedding (OLE) Compound File resources (olecfrc)
long_description = olecfrc is a Python module part of olecf-kb to allow reuse of Object Linking and Embedding (OLE) Compound File resources.
long_description_content_type = text/plain
url = https://github.com/libyal/olecf-kb
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  olecfrc = olecfrc
packages = find:
python_requires = >=3.8
scripts =
  scripts/vba.py

[options.package_data]
olecfrc =
  *.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_wheel]
universal = 1
